# tdm-dos-orillas

./: .gitignore  404.html  Makefile  README.md  README.md.old  _config.yml  deprecated_CNAME  index.html  mkdocs.yml  pyproject.toml  seasons.yaml  sitemap.xml  somefile  testsetenv.py  update_results_to_publish.sh  update_season_yaml.py
.github/workflows/: ci-site-publisher-cron.yml  ci-site-publisher-master-merge.yml  ci-site-publisher.yml  ci.yml  test-commit.yml  test-if-workflow.yml
docs/: .nav.yml  CNAME  _config.yml  championship.md  historial.md  index.md  rating.md  regulation.md
docs.old/: _config.yml
docs.old/_posts/: 2022-05-01-inicio.md
docs/_posts/: 2021-01-01-tournament1.md  2021-02-02-tournament2.md
docs/championship/: index.md
docs/old-seasons/: index.md
docs/rating/: index.md
docs/season/: .nav.yml  index.md  old_seasons.md
docs/stylesheets/: table.css
docs/tournaments/: index.md
overrides/: main.html
search/: search_index.json
season/: index.html
season/old_seasons/: index.html
snippets/2022/: rules.md
snippets/2023/: championship2023Primera.html  championship2023Segunda.html  championship2023Tercera.html  rating2023.html  rules.md
snippets/2024/: championship2024Primera.html  championship2024Segunda.html  championship2024Tercera.html  rating2024.html
snippets/2025/: Historiales_2025.md  championship2025Cuarta.html  championship2025Primera.html  championship2025Segunda.html  championship2025Tercera.html  rating2025.html  rules.md
snippets/2026/: championship2026Cuarta.html  championship2026Primera.html  rules.md  (+3 more)
(+739 files in other folders)
