[project]
name = "tdm-dos-orillas"
version = "2025.11.20"
description = "Site tdm dos orillas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
    "ranking-table-tennis>=2025.9.24",
]
